--- a/App/static/style.css
+++ b/App/static/style.css
@@ -4,11 +4,22 @@
             margin: 0;
             padding: 0;
             background-color: #f1f1f1;
+            background-image: url('bg.jpeg');
+            background-size: 1920 1080;
+            background-position: center;
+            background-repeat: no-repeat;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
             
         }
-        .container{  display: flex;
-            align-items:  center;
-            justify-content:  center; }
+        .container {
+            background-color: rgba(255, 255, 255, 0.479); 
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        
 
         header {
             background-color: #333;
@@ -25,7 +36,7 @@
         }
 
         h2 {
-            color: #333;
+            color: #ff0000;
         }
 
         .trainer-info {
