--- a/App/templates/attendance.html
+++ b/App/templates/attendance.html
@@ -12,6 +12,7 @@
     </header>
     {% include "navbar.html" %}
     <div class="container"> 
+        <div class="attandance">
         <main >
 
         <h2>Attendance Tracking</h2>
@@ -33,8 +34,8 @@
                 <button type="submit">Mark Attendance</button>
         </form>
         {% endblock %} 
+    </main>
     </div>
-    </main> 
 </div>
 </body>
 </html>
