--- a/App/static/style.css
+++ b/App/static/style.css
@@ -1,109 +1,129 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
 
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f1f1f1;
-            background-image: url('bg.jpeg');
-            background-size: 1920 1080;
-            background-position: center;
-            background-repeat: no-repeat;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            
-        }
-        .container {
-            background-color: rgba(255, 255, 255, 0.479); 
-            display: flex;
+
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f1f1f1;
+    background-image: url('bg.jpeg');
+    background-size: 1920 1080;
+    background-position: center;
+    background-repeat: no-repeat;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    
+}
+.container {
+    background-color: rgba(255, 255, 255, 0.479); 
+    display: -webkit-box; 
+    display: -ms-flexbox; 
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
             align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
             justify-content: center;
-        }
-        
+}
 
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
 
-        
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+}
 
-        main {
-            margin: 20px;
-            text-align: center;
-        }
 
-        h2 {
-            color: #ff0000;
-        }
 
-        .trainer-info {
-            max-width: 600px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
+main {
+    margin: 20px;
+    text-align: center;
+}
+
+h2 {
+    color: #ff0000;
+}
+
+.trainer-info {
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
+}
 
-        .appointment-form {
-            max-width: 300px;
-            margin: 20px auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
+.appointment-form {
+    max-width: 300px;
+    margin: 20px auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .register {
-            max-width: 300px;
-            margin: 20px auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
+}
+.register {
+    max-width: 300px;
+    margin: 20px auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .attendance {
-            max-width: 300px;
-            margin: 20px auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
+}
+.attendance {
+    max-width: 300px;
+    margin: 20px auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .equipment-info{
-            max-width: 300px;
-            margin: 20px auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
+}
+.equipment-info{
+    max-width: 300px;
+    margin: 20px auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
+}
 
-        label {
-            margin-bottom: 5px;
-            color: #333;
-            display: block;
-        }
+label {
+    margin-bottom: 5px;
+    color: #333;
+    display: block;
+}
 
-        input, select {
-            padding: 8px;
-            margin-bottom: 10px;
-            width: 100%;
+input, select {
+    padding: 8px;
+    margin-bottom: 10px;
+    width: 100%;
+    -webkit-box-sizing: border-box;
             box-sizing: border-box;
-        }
+}
 
-        button {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            border: none;
-            cursor: pointer;
-            width: 100%;
+button {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    -webkit-box-sizing: border-box;
             box-sizing: border-box;
-        }
+}
 
-        button:hover {
-            background-color: #555;
-        }
+button:hover {
+    background-color: #555;
+}
